@@ -171,10 +171,15 @@ static int	get_proxyconfig_data(zbx_uint64_t proxy_hostid, struct zbx_json *j)
 					", hosts r where t.hostid=r.hostid"
 						" and r.proxy_hostid=" ZBX_FS_UI64
 						" and r.status=%d"
-						" and t.status in (%d,%d)",
+						" and t.status in (%d,%d)"
+						" and t.type in (%d,%d,%d,%d,%d,%d,%d,%d,%d,%d,%d)",
 					proxy_hostid,
 					HOST_STATUS_MONITORED,
-					ITEM_STATUS_ACTIVE, ITEM_STATUS_NOTSUPPORTED);
+					ITEM_STATUS_ACTIVE, ITEM_STATUS_NOTSUPPORTED,
+					ITEM_TYPE_ZABBIX, ITEM_TYPE_ZABBIX_ACTIVE,
+					ITEM_TYPE_SNMPv1, ITEM_TYPE_SNMPv2c, ITEM_TYPE_SNMPv3,
+					ITEM_TYPE_IPMI, ITEM_TYPE_TRAPPER, ITEM_TYPE_SIMPLE,
+					ITEM_TYPE_HTTPTEST, ITEM_TYPE_EXTERNAL, ITEM_TYPE_DB_MONITOR);
 		}
 		else if (0 == strcmp(pt[i].table, "hosts_templates"))
 		{
